# steer-opencell-data

./: .gitattributes  .gitignore  AGENTS.md  CITATION.cff  CLA.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENCE.txt  LICENSE  README.md  SECURITY.md  pyproject.toml  refresh_local_database.sh  sync_database_to_aws.sh
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: cla.yml  tests.yml
cell_references/: lfp_cylindrical_tabless.ipynb  lfp_cylindrical_tabless.py  lfp_prismatic_flatwound.ipynb  lfp_prismatic_flatwound.py  lfp_prismatic_stacked.ipynb  lfp_prismatic_stacked.py  nfm111_cylindrical_tabless.ipynb  nfm111_cylindrical_tabless.py  nfm111_prismatic_zfold.ipynb  nfm111_prismatic_zfold.py  nfpp_prismatic_flatwound.ipynb  nfpp_prismatic_flatwound.py  nmc811_cylindrical_tabbed.ipynb  nmc811_cylindrical_tabbed.py  nmc811_pouch_stacked.ipynb  nmc811_pouch_stacked.py  nmc811_prismatic_stacked.ipynb  nmc811_prismatic_stacked.py
cell_stage/: Hakadi.ipynb
cell_teardowns/: BYD_46120.ipynb  BYD_46120.py  CBAK.ipynb  Cell_2.ipynb  Cell_4.ipynb  EVE_C33.ipynb  EVE_C33.py  Hakadi.ipynb  Hakadi.py  HiNa.ipynb  HiNa.py  QNAS NL.ipynb  QNAS NL.py  QNAS RL.ipynb  QNAS RL.py  QNAS_NL.ipynb  QNAS_RL.ipynb  TESLA_4680.ipynb  TESLA_4680.py  UniGrid_Cylindrical.ipynb  Vendor F.ipynb  Vendor F.py  Vendor G10.ipynb  Vendor G10.py  Vendor G7.ipynb  Vendor G7.py  Vendor_D_NFPP.ipynb  Vendor_E_NFPP.ipynb  Vendor_G_NFM.ipynb  Vendor_G_NFPP.ipynb
cell_teardowns_old/: BYD_46120.ipynb  CBAK.ipynb  Cell_4.ipynb  EVE_C33.ipynb  HiNa.ipynb  QNAS_NL.ipynb  QNAS_RL.ipynb  TESLA_4680.ipynb  UniGrid_Cylindrical.ipynb  Vendor_D_NFPP.ipynb  Vendor_E_NFPP.ipynb  Vendor_G_NFM.ipynb
default_materials/: anode_materials.ipynb  anode_materials.py  binder_materials.ipynb  binder_materials.py  cathode_materials.ipynb  cathode_materials.py  conductive_additive_materials.ipynb  conductive_additive_materials.py  current_collectors_materials.ipynb  current_collectors_materials.py  insulation_materials.ipynb  insulation_materials.py  prismatic_container_materials.ipynb  prismatic_container_materials.py  separator_materials.ipynb  separator_materials.py  tape_materials.ipynb  tape_materials.py
signatures/: cla.json
solid_state_cells/: QSE_5B.ipynb  QSE_5B.py
steer_opencell_data/: DataManager.py  __init__.py  database.db  script_utils.py
steer_opencell_data.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
(+25 files in other folders)
