[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "steer-opencell-data"
dynamic = ["version"]
description = "STEER OpenCell Data - Data feed for STEER OpenCell"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
    {name = "Nicholas Siemons", email = "nsiemons@stanford.edu"}
]
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
dependencies = [
    "steer-core==0.1.39",
]

[project.urls]
Homepage = "https://github.com/stanford-developers/steer-opencell-data/"
Repository = "https://github.com/stanford-developers/steer-opencell-data/"

[tool.setuptools.dynamic]
version = {attr = "steer_opencell_data.__version__"}

[tool.setuptools]
packages = ["steer_opencell_data"]

[tool.setuptools.package-data]
steer_opencell_data = ["database.db"]

    
